#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET publicnodeclient)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES publicnodeclient.cpp)

# ######################################################################################################################
# Includes
# ######################################################################################################################

# ######################################################################################################################
# Target
# ######################################################################################################################

add_library(${TARGET} STATIC ${SOURCES})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} PUBLIC aoscommon aoscoreapi-gen-objects utils)

# ######################################################################################################################
# Install
# ######################################################################################################################

install(TARGETS ${TARGET} DESTINATION lib)

install(
    DIRECTORY ${CMAKE_SOURCE_DIR}/include/publicnodeclient
    DESTINATION include
    FILES_MATCHING
    PATTERN "*.hpp"
)
